# emotiontest

./: .gitignore  README.md  index.html  lsvc_training.ipynb  package-lock.json  package.json  tsconfig.json  vite.config.ts
notebook/: lsvc_training.ipynb
public/: algo.py  index.html  lsvc_model.pkl  main.py  model.pkl  pyscript.json  tfidf_vectorizer.pkl  train_model.py  vectorizer.pkl
src/: App.css  App.tsx  copyAsset.js  styles.d.ts
src/Component/: Body.js  Body.jsx  Body.tsx  Footer.js  Footer.jsx  Footer.tsx  Header.js  Header.tsx
src/components/: BodySkeleton.tsx
src/components/ui/: input.tsx  progress.tsx  scroll-area.tsx  select.tsx  skeleton.tsx  sonner.tsx
src/models/: pyproject.toml
src/models/src/model_api/: api.py
src/models/src/model_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/page/: Body.tsx  Footer.tsx  Header.tsx
src/services/: pyodideService.ts
src/workers/: pyodideWorker.ts
