[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "model_api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "scikit-learn"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
model_api = ["*.pkl"]